# library_with_public_and_private_headers

./: CMakeLists.txt  my_lib.cpp  my_lib_api.hpp
